# oliver

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  vision.md
.github/: FUNDING.yml
backend/: Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/app/: database.py  exceptions.py  main.py
backend/tests/: conftest.py  test_analytics.py  test_backlog.py  test_days.py  test_days_off.py  test_goals.py  test_health.py  test_mcp_log_revert.py  test_notifications.py  test_reminders.py  test_schedule_application.py  test_settings.py  test_tags.py  test_tasks.py  test_templates.py  test_timer.py
docs/demo/: oliver_demo.sql
docs/plans/: 2026-02-22-day-navigation-design.md  2026-02-22-day-navigation.md  2026-02-22-day-overview-modal-and-export-design.md  2026-02-22-day-overview-modal-and-export-implementation.md  2026-02-24-continue-tomorrow-design.md  2026-02-24-continue-tomorrow.md  2026-02-24-task-inline-editing-design.md  2026-02-24-task-inline-editing.md  2026-02-25-manual-time-addition-design.md  2026-02-27-recurring-tasks-design.md  2026-02-27-recurring-tasks.md  2026-03-01-mute-notifications-design.md  2026-03-01-notifications-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
mcp-server/: Dockerfile  db.py  requirements.txt  server.py
mcp-server/models/: __init__.py  daily_note.py  day.py  day_metadata.py  day_off.py  day_rating.py  (+9 more)
shared/: pyproject.toml
shared/oliver_shared/: __init__.py  constants.py  validation.py
(+139 files in other folders)
