[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oliver-shared"
version = "0.1.0"
description = "Shared constants and validation logic for Oliver services"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
